<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/customParentLayout"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logoLaird"
        style="@style/logoLaird"        
        android:contentDescription="@string/image_descr_logo_laird"/>
    
    <TextView
        android:id="@+id/textDisclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textDisclaimer_marginBottom"
        android:layout_marginLeft="@dimen/textDisclaimer_marginHorizontal"
        android:layout_marginRight="@dimen/textDisclaimer_marginHorizontal"
        android:textSize="@dimen/textDisclaimer_textSize"
        android:textStyle="normal"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_below="@id/logoLaird"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/disclaimer_text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        <!-- Decline Button -->
           <Button
               android:id="@+id/btnDecline"
               style="@style/btnDisclaimer"
               android:text="@string/btnDecline" />
        <!-- Accept Button -->
           <Button
               android:id="@+id/btnAccept"
               style="@style/btnDisclaimer"
               android:text="@string/btnAccept" />
    </LinearLayout>
</RelativeLayout>